# EquipQR

./: .env.example  .gitignore  README.md  docker-compose.yml
repos/backend/: Dockerfile  go.mod  go.sum
repos/backend/cmd/equipqr/: main.go
repos/backend/internal/database/: config.go
repos/backend/internal/handlers/: business.go  equipment.go  general.go  health.go  issue.go  pending_join.go  qr.go  user.go  webauthn.go
repos/backend/internal/repositories/: business.go  equipment.go  issue.go  pending_join.go  qr.go  user.go  webauthn.go
repos/backend/internal/server/: server.go
repos/backend/internal/utils/: config.go  dto.go  jwt.go  password.go  pika.go  qr.go  validate.go
repos/backend/qr_gen/: .gitignore
repos/frontend/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
repos/frontend/src/: App.tsx  app.css  app.html
repos/frontend/src/components/: EquipmentDisplay.tsx  QRScanner.tsx
repos/frontend/src/lib/: mockData.ts  tools.ts
repos/frontend/src/routes/: +layout.svelte  +page.svelte
repos/frontend/src/services/: equipmentApi.ts
repos/frontend/src/types/: equipment.ts
repos/qr_gen/: README.md  pyproject.toml
repos/qr_gen/src/: qr_gen.py
source/backend/: Dockerfile  go.mod  go.sum
source/backend/cmd/equipqr/: main.go
source/backend/internal/handlers/: issue.go  (+3 more)
source/backend/web/: .frontend_build_hash  index.html
source/frontend/: package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
source/frontend/src/: app.html
source/frontend/static/: manifest.webmanifest  sw.js
(+149 files in other folders)
