[project]
name = "qr-gen"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Justin N. Pitera", email = "justinpitera@gmail.com" }
]
dependencies = [
    "qrcode>=8.2",
    "pillow>=11.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qr_gen"]
